# aipms

./: .coverage  .gitignore  CLAUDE.md  README.md  start.sh
backend/: .coverage  add_sample_data.py  generate_operational_data.py  init_benchmark_data.py  init_data.py  init_event_test_data.py  pms.db-shm  pms.db-wal  pyproject.toml  test_event_handlers.py
backend/app/: __init__.py  config.py  database.py  domain_plugin.py  main.py
backend/app/hotel/: __init__.py  business_rules.py  field_definitions.py  hotel_domain_adapter.py  plugin.py
backend/app/models/: __init__.py  events.py  ontology.py  schemas.py  security_events.py
backend/app/routers/: __init__.py  ai.py  audit_logs.py  auth.py  benchmark.py  billing.py  checkin.py  checkout.py  conversations.py  debug.py  employees.py  guests.py  ontology.py  prices.py  reports.py  reservations.py  rooms.py  security.py  settings.py  tasks.py  undo.py
backend/app/security/: __init__.py  auth.py  permissions.py
backend/app/services/: __init__.py  ai_service.py  alert_service.py  audit_service.py  benchmark_assertions.py  benchmark_runner.py  benchmark_service.py  billing_service.py  branch_utils.py  checkin_service.py  checkout_service.py  config_history_service.py  conversation_service.py  employee_service.py  event_bus.py  event_handlers.py  guest_service.py  guest_service_v2.py  llm_service.py  metadata.py  ontology_metadata_service.py  param_parser_service.py  price_service.py  report_service.py  reservation_service.py  room_service.py  room_service_v2.py  security_event_service.py  task_service.py  undo_service.py
backend/app/system/: schemas.py
backend/benchmark_init/: init_with_guests.py
backend/core/: __init__.py
backend/core/ai/: __init__.py  action_search.py  actions.py  context.py  debug_logger.py  embedding.py  hitl.py  intent_router.py  llm_call_context.py  ooda_orchestrator.py  prompt_builder.py  query_compiler.py  query_keywords.py  reflexion.py  response_generator.py  result.py  schema_retriever.py  vector_store.py
backend/core/domain/: __init__.py  bill.py  employee.py  guest.py  interfaces.py  relationships.py  reservation.py  room.py  (+2 more)
backend/scripts/: init_schema_index.py
backend/tests/: conftest.py  test_benchmark_models.py  test_config_history.py  test_event_bus.py  test_event_handlers.py  test_events.py  test_init_schema_index.py  test_models_coverage.py  test_ontology.py  test_security_events.py  test_undo_service.py
tools/create-ontology-app/: README.md  build_templates.sh  pyproject.toml
(+595 files in other folders)
