[project]
name = "create-ontology-app"
version = "0.1.0"
description = "Scaffold generator for Ontology Runtime applications"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
create-ontology-app = "create_ontology_app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/create_ontology_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
